updated images and css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 .jumbotron{
-    background: url('https://png.pngtree.com/png-clipart/20190515/original/pngtree-modern-shiny-glitters-background-png-image_3543006.jpg');
+    background: url('../images/—Pngtree—modern shiny glitters background_3543006.jpg');
     background-size: 18%;
 
 }
@@ -9,6 +9,6 @@ h1{
     }
 
 body{
-    background: url('https://png.pngtree.com/png-clipart/20190515/original/pngtree-modern-shiny-glitters-background-png-image_3543006.jpg');
+    background: url('../images/—Pngtree—modern shiny glitters background_3543006.jpg');
     background-size: 50%;
 }
